# ffprobe-wasm

./: .gitmodules  COPYING.md  Cargo.toml  README.md  deno.json  mod.ts
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
core/: .gitignore  Cargo.toml  build.rs
core/src/: bindings.rs  lib.rs  util.rs  version.rs
core/src/bindings/: avcodec.rs  avformat.rs  avutil.rs
src/: common.ts  error.ts  function.test.ts  function.ts  types.ts  wasmUtil.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  util.rs
wasm/wit/: ffprobe.wit
